--- a/app/src/main/res/layout/activity_mis_clases.xml
+++ b/app/src/main/res/layout/activity_mis_clases.xml
@@ -15,6 +15,25 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/include_misclases"
         />
+    <LinearLayout
+        android:id="@+id/misclases_loader_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:background="@color/colorPrimaryAlpha"
+        android:visibility="gone"
+        android:clickable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            />
+    </LinearLayout>
 
     <include
         android:id="@+id/include_misclases"
