--- a/app/src/main/res/layout/card_item_inicio_alumnos.xml
+++ b/app/src/main/res/layout/card_item_inicio_alumnos.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/inicio_cardview_alumnos"
-    android:layout_width="180dp"
-    android:layout_height="180dp"
+    android:layout_width="160dp"
+    android:layout_height="160dp"
     android:layout_marginStart="6dp"
     android:layout_marginTop="6dp"
     android:layout_marginEnd="6dp"
@@ -16,29 +15,35 @@
     android:orientation="vertical"
     android:padding="10dp"
     card_view:cardBackgroundColor="@color/colorPrimaryAlpha"
-    card_view:cardCornerRadius="90dp"
+    card_view:cardCornerRadius="80dp"
     card_view:cardElevation="0dp">
 
-
     <RelativeLayout
-        android:layout_width="180dp"
-        android:layout_height="180dp">
-
-
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        >
         <TextView
             android:id="@+id/nombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="148dp"
-            android:layout_marginBottom="0dp"
-            android:text="Materia"
+            android:layout_marginTop="122dp"
+            android:text="Nombre de Materia"
             android:textAlignment="center"
             android:textColor="#454444"
             android:textStyle="bold" />
 
-        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/foto_materia_normal"
+            android:layout_width="107dp"
+            android:layout_height="107dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="15dp"
+            android:src="@drawable/matematica"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+<!--        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/foto_materia"
             android:layout_width="105dp"
             android:layout_height="107dp"
@@ -53,7 +58,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.506"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />-->
 
 
     </RelativeLayout>
