--- a/app/src/main/res/layout/fragment_bienvenida_ejm.xml
+++ b/app/src/main/res/layout/fragment_bienvenida_ejm.xml
@@ -17,14 +17,12 @@ tools:context=".Bienvenida.BienvenidaFragments.BienvenidaEjm">
         android:id="@+id/imageView2"
         android:layout_width="326dp"
         android:layout_height="183dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="224dp"
         android:alpha="0.5"
         android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/img_logo_white_medium" />
 
     <TextView
