--- a/app/src/main/res/layout/fragment_bienvenida_fragment1.xml
+++ b/app/src/main/res/layout/fragment_bienvenida_fragment1.xml
@@ -17,15 +17,12 @@ tools:context=".Bienvenida.BienvenidaFragments.BienvenidaFragment1">
         android:id="@+id/imageView2"
         android:layout_width="326dp"
         android:layout_height="183dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="8dp"
         android:alpha="0.5"
         android:contentDescription="@string/app_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:srcCompat="@drawable/img_logo_white_medium" />
 
     <TextView
